--- a/html_advanced/article.html
+++ b/html_advanced/article.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html5>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" viewport-fit="cover", width="device-width", initial-scale="1.0">
