--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -63,12 +63,17 @@
                         <p>Take a look in our portfolio</p>
                     </header>
                     <div>
-                        <div><img src="./images/pic-work-01.jpg" alt=""></div>
-                        <article><h3>Interior Design</h3></article>
-                        <div><img src="./images/pic-work-02.jpg" alt=""></div>
-                        <article><h3>Web Development</h3></article>
-                        <div><img src="./images/pic-work-03.jpg" alt=""></div>
-                        <article><h3>Personal Brand</h3></article>
+                        <article>
+                            <div><img src="./images/pic-work-01.jpg" alt=""></div>
+                            <h3>Interior Design</h3>
+                        </article>
+                        <article>
+                            <div><img src="./images/pic-work-02.jpg" alt=""></div>
+                            <h3>Web Development</h3>
+                        </article>
+                        <article>
+                            <div><img src="./images/pic-work-03.jpg" alt=""></div>
+                            <h3>Personal Brand</h3></article>
                     </div>
                 </div>
             </section>
